fix: CSS alignment fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,6 +429,19 @@ td p{
   font-weight: 500;
 }
 
+td ul{
+  margin: 0 4rem;
+}
+
+tr th{
+  text-align: center;
+  vertical-align: middle;
+}
+
+.advanced-analytics-content ul li{
+  font-size: 24px;
+}
+
 td button{
   margin: 0 3rem;
 }
@@ -440,6 +453,7 @@ td button{
 .revolving-title {
   margin: 2rem 0;
   text-align: center;
+  font-size: 34px;
 }
 
 .revolving-description {
